samples/_failures_safe/1761316446_d219fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1383030.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_a1383030.c:150:12: error: missing terminating " character
  150 |     printf("Unique words
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_a1383030.c:150:5: error: expected expression at end of input
  150 |     printf("Unique words
      |     ^~~~~~
./samples/SAFE/__tmp_a1383030.c:150:5: error: expected declaration or statement at end of input
